# app/Http/Controllers/API/InteriorController.php
@@ -26,13 +26,111 @@ use App\Models\Interior;
       *         response=200,
       *         description="successful",
       *         @OA\JsonContent()
-      *     )
+      *     ),
+      *     @OA\Parameter(
+      *     name="_page",
+      *     in="query",
+      *     description="current page",
+      *     required= true,
+      *         @OA\Schema(
+      *             type="integer",
+      *             format="int64",
+      *             example=1
+      *         )
+      *     ),
+      *     @OA\Parameter(
+      *     name="_limit",
+      *     in="query",
+      *     description="max item in a page",
+      *     required= true,
+      *         @OA\Schema(
+      *             type="integer",
+      *             format="int64",
+      *             example=10
+      *         )
+      *     ),
+      *     @OA\Parameter(
+      *     name="_search",
+      *     in="query",
+      *     description="word to search",
+      *     required= false,
+      *         @OA\Schema(
+      *             type="string",
+      *         )
+      *     ),
+      *     @OA\Parameter(
+      *     name="_producer",
+      *     in="query",
+      *     description="search by producer name",
+      *     required= false,
+      *         @OA\Schema(
+      *             type="string",
+      *         )
+      *     ),
+      *     @OA\Parameter(
+      *     name="_sort_by",
+      *     in="query",
+      *     description="word to search",
+      *     required= false,
+      *         @OA\Schema(
+      *             type="integer",
+      *             example="latest"
+      *         )
+      *     ),
       * )
       */
-     public function index()
+     public function index(Request $request)
      {
-         return Interior::get();
-     }
+       try {
+            $data['filter'] = $request ->all();
+            $page           = $data['filter']['_page'] =(@$data['filter']['_page'] ? intval($data['filter']['_page']) : 1);
+            $limit          = $data['filter']['_limit'] =(@$data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000);
+            $offset         = ($page?($page-1)*$limit:0);
+            $data['products']= Interior::whereRaw('1 = 1');
+
+            if($request->get('_search')){
+                $data['products'] = $data['products']->whereRaw('(LOWER(title) LIKE "%'.strtolower($request->get('_search')).'%" 
+                OR LOWER (Producer) LIKE "%'.strtolower($request->get('_search')).'%")');
+            }
+
+            if ($request->get('_producer')){
+                $data ['products']=$data ['products']->whereRaw ('LOWER(producer)="'.strtolower($request->get('_producer')).'"');
+            }
+            
+            if ($request->get('_sort_by')){
+                switch ($request->get('_sort_by')) {
+                    default:
+                    case 'latest_Producer':
+                    $data['product']= $data['products']->orderBy('Year_produced');
+                    break;
+                    case 'latest_added':
+                    $data['products'] = $data['products']->orderBy('created_at');
+                    break;
+                    case 'title_asc':
+                    $data['products'] = $data['products']->orderBy('name','ASC');
+                    break;
+                    case 'title_desc':
+                    $data['products'] = $data['products']->orderBy('name','DESC');
+                    break;
+                    case 'price_asc':
+                    $data['products'] = $data['products']->orderBy('price','ASC');
+                    break;
+                    case 'price_desc':
+                    $data['products'] = $data['products']->orderBy('price','DESC');
+                    break;
+                }}
+                 $data['products_count_total'] = $data['products']->count();
+                 $data['products']             = ($limit==0 && $offset==0)?$data['product']:$data['products']->limit($limit)->offset($offset);
+                 // $data['products_raw_sql']  = $data['products]->toSql();
+                 $data['products']             = $data['products']->get();
+                 $data['products_count_start'] = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+1);
+                 $data['products_count_end']   = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+sizeof($data['products']));
+                 return response()->json($data,200);
+
+        }       catch (\Exception $exception) {
+            throw new HttpException(400, "invalid data : {$exception->getMessage()}");
+        }
+    }
  
      /**
       * @OA\Post(
